# texxy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  texxy.desktop
src/: README.md  editorwidget.cpp  editorwidget.h  findreplacedialog.cpp  findreplacedialog.h  language_support.h  languages.cpp  syntax-c.cpp  syntax-c.h  texxy.cpp  texxy.h
